tests/errors/array_03.f90
program array_03
    implicit none
    real ::  e2(*)
end program
